--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,8 @@
         <item name="android:screenOrientation">portrait</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/helvetica_normal</item>
-
+        <!--设置禁用view无障碍服务,部分设备textview选中内容的时候会奔溃 -->
+        <item name="android:importantForAccessibility">no</item>
         <!-- about issue 24880 在設定window背景色時在暗色模式時也會吃這裡 不會吃 night/styles -->
         <!-- <item name="android:windowBackground"></item> -->
     </style>
