--- a/app/src/main/res/layout/activity_promotion_detail.xml
+++ b/app/src/main/res/layout/activity_promotion_detail.xml
@@ -17,7 +17,8 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:transitionGroup="true">
 
         <LinearLayout
             android:layout_width="match_parent"
