--- a/app/src/main/res/layout/view_user_vip.xml
+++ b/app/src/main/res/layout/view_user_vip.xml
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_8"
                 android:layout_weight="1"
-                android:text="VIP benefits"
+                android:text="@string/P371"
                 android:textColor="@color/color_0D2245"
                 android:textFontWeight="700"
                 android:textSize="@dimen/textSize14sp"
@@ -138,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/icon_arrow07"
                 android:drawablePadding="@dimen/margin_8"
-                android:text="check more benefits"
+                android:text="@string/J634"
                 android:textColor="@color/color_A7B2C4"
                 android:textSize="@dimen/textSize12sp" />
 
@@ -183,7 +183,7 @@
                     android:gravity="center"
                     android:includeFontPadding="false"
                     android:paddingHorizontal="@dimen/margin_10"
-                    android:text="Promote Bonus"
+                    android:text="@string/P363"
                     android:textColor="@color/color_0D2245"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -226,7 +226,7 @@
                     android:gravity="center"
                     android:includeFontPadding="false"
                     android:paddingHorizontal="@dimen/margin_10"
-                    android:text="Birthday Bonus"
+                    android:text="@string/P365"
                     android:textColor="@color/color_0D2245"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -269,7 +269,7 @@
                     android:gravity="center"
                     android:includeFontPadding="false"
                     android:paddingHorizontal="@dimen/margin_10"
-                    android:text="Weekly Bonus"
+                    android:text="@string/P364"
                     android:textColor="@color/color_0D2245"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -312,7 +312,7 @@
                     android:gravity="center"
                     android:includeFontPadding="false"
                     android:paddingHorizontal="@dimen/margin_10"
-                    android:text="Exclusive Packet"
+                    android:text="@string/P366"
                     android:textColor="@color/color_0D2245"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintEnd_toEndOf="parent"
