--- a/app/src/main/res/layout/activity_my_vip_detail.xml
+++ b/app/src/main/res/layout/activity_my_vip_detail.xml
@@ -30,7 +30,7 @@
            android:background="@drawable/bg_keepgrade_orange"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/textSize12sp"
-           android:text="Keepgrade"/>
+           android:text="@string/P442"/>
        <LinearLayout
            android:id="@+id/linContent"
            android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
                    android:includeFontPadding="false"
                    android:textSize="@dimen/textSize14sp"
                    android:textColor="@color/color_0D2245"
-                   android:text="to Keepgrade"/>
+                   android:text="@string/P396"/>
            </LinearLayout>
            <org.cxct.sportlottery.ui.profileCenter.vip.view.VipProgressView
                android:id="@+id/vpProgress"
@@ -73,7 +73,7 @@
                android:layout_marginTop="@dimen/margin_8"
                android:textSize="@dimen/textSize12sp"
                android:textColor="@color/color_999999"
-               android:text="Keepgrade will be computed every month"/>
+               android:text="@string/P440"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linEmpty"
@@ -94,7 +94,7 @@
                android:layout_marginTop="@dimen/margin_4"
                android:textSize="@dimen/textSize14sp"
                android:textColor="@color/color_999999"
-               android:text="No need to maintain the current level"/>
+               android:text="@string/P419"/>
        </LinearLayout>
    </FrameLayout>
     <LinearLayout
@@ -110,20 +110,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_12"
             android:includeFontPadding="false"
             android:textStyle="bold"
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_0D2245"
-            android:text="Relegation rules"/>
+            android:text="@string/P398"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_12"
             android:includeFontPadding="false"
             android:lineHeight="@dimen/margin_20"
             android:textSize="@dimen/textSize14sp"
             android:textColor="@color/color_6D7693"
-            android:text="Starting from the 1st of the next month after a member's VIP level change, members must complete the valid betting requirements of the corresponding level before they can continue to maintain their level for 30 days."/>
+            android:text="@string/P400"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:lineHeight="@dimen/margin_20"
+            android:textSize="@dimen/textSize14sp"
+            android:textColor="@color/color_6D7693"
+            android:text="@string/P401"/>
 
     </LinearLayout>
 
