--- a/app/src/main/res/layout/activity_my_vip_detail.xml
+++ b/app/src/main/res/layout/activity_my_vip_detail.xml
@@ -110,8 +110,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_12"
-            android:includeFontPadding="false"
             android:textStyle="bold"
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_0D2245"
@@ -119,16 +117,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:lineHeight="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_12"
+            android:textSize="@dimen/textSize14sp"
+            android:textColor="@color/color_6D7693"
+            android:text="@string/P399"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_12"
             android:textSize="@dimen/textSize14sp"
             android:textColor="@color/color_6D7693"
             android:text="@string/P400"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:lineHeight="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_12"
             android:textSize="@dimen/textSize14sp"
             android:textColor="@color/color_6D7693"
             android:text="@string/P401"/>
