--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -659,5 +659,6 @@
     <color name="color_e0ecfc">#e0ecfc</color>
     <color name="color_eed39f">#eed39f</color>
     <color name="color_ff871f">#ff871f</color>
+    <color name="color_854C00">#854C00</color>
 
 </resources>
