--- a/app/src/main/res/layout/fragment_verify_reject.xml
+++ b/app/src/main/res/layout/fragment_verify_reject.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="@dimen/margin_12"
+                android:gravity="center_horizontal"
                 android:text="@string/P331"
                 android:textColor="@color/color_6D7693"
                 android:textSize="@dimen/textSize14sp"/>
