--- a/app/src/main/res/layout/activity_forget_ways.xml
+++ b/app/src/main/res/layout/activity_forget_ways.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginTop="@dimen/margin_20"
-        android:text="@string/recover_password"
+        android:text="@string/forget_password"
         android:textSize="24dp"
         android:textStyle="bold"
         app:gradient_angle="270"
@@ -94,6 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="@dimen/margin_16"
+            android:visibility="gone"
             android:background="@drawable/bg_blue_radius_8"
             android:drawableLeft="@drawable/ic_email_white"
             android:paddingHorizontal="16dp"
