--- a/app/src/main/res/layout/activity_forget_ways.xml
+++ b/app/src/main/res/layout/activity_forget_ways.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginTop="@dimen/margin_20"
-        android:text="@string/forget_password"
+        android:text="@string/forget_password_title"
         android:textSize="24dp"
         android:textStyle="bold"
         app:gradient_angle="270"
