修改忘记密码title

--- a/app/src/main/res/layout/activity_forget_password2.xml
+++ b/app/src/main/res/layout/activity_forget_password2.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginTop="@dimen/margin_20"
-        android:text="@string/recover_password"
+        android:text="@string/forget_password_title"
         android:textSize="24dp"
         android:textStyle="bold"
         app:gradient_angle="270"
