--- a/app/src/main/res/layout/item_elec_game.xml
+++ b/app/src/main/res/layout/item_elec_game.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_home_game_item">
         <ImageView
             android:id="@+id/ivCover"
             android:layout_width="match_parent"
@@ -21,6 +22,21 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintDimensionRatio="145:162"
             android:scaleType="centerCrop"/>
+
+        <TextView
+            android:id="@+id/tvCollect"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/ivCover"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_collect_heart"
+            android:drawablePadding="@dimen/margin_4"
+            android:layout_marginHorizontal="6dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/color_0D2245"
+            android:textSize="@dimen/textSize14sp"
+            tools:text="111" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -60,7 +76,16 @@
         </eightbitlab.com.blurview.BlurView>
 
     </androidx.cardview.widget.CardView>
-
+    <ImageView
+        android:id="@+id/iv_fav"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="right"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="@dimen/margin_8"
+        android:layout_marginRight="@dimen/margin_12"
+        android:src="@drawable/selector_game_fav" />
 
     <LinearLayout
         android:id="@+id/linMaintenance"
@@ -90,7 +115,7 @@
         android:id="@+id/blurview_More"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
