--- a/app/src/main/res/layout/item_game_child.xml
+++ b/app/src/main/res/layout/item_game_child.xml
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="8dp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -44,10 +45,10 @@
 
                 <ImageView
                     android:id="@+id/iv_fav"
-                    android:layout_width="34dp"
-                    android:layout_height="34dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_gravity="right"
-                    android:padding="4dp"
+                    android:layout_margin="4dp"
                     android:src="@drawable/selector_game_fav" />
 
 
@@ -76,18 +77,31 @@
 
             <TextView
                 android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginHorizontal="4dp"
+                android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="6dp"
-                android:layout_marginBottom="8dp"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/color_414655"
                 android:textFontWeight="700"
                 android:textSize="13sp"
                 tools:text="Game Name" />
+            <TextView
+                android:id="@+id/tvCollect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:drawableLeft="@drawable/ic_collect_heart"
+                android:drawablePadding="@dimen/margin_4"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="4dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/color_6D7693"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="11" />
         </LinearLayout>
 
     <eightbitlab.com.blurview.BlurView
