--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -647,5 +647,6 @@
     <color name="color_283042">#283042</color>
     <color name="color_A5B2D0">#A5B2D0</color>
     <color name="color_FFA800">#FFA800</color>
+    <color name="color_F2F7FE">#F2F7FE</color>
 
 </resources>
