--- a/app/src/main/res/layout/item_dailyconfig.xml
+++ b/app/src/main/res/layout/item_dailyconfig.xml
@@ -83,6 +83,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_5"
                         android:layout_weight="1"
+                        android:includeFontPadding="false"
                         android:singleLine="true"
                         android:textColor="@color/color_F23C3B"
                         android:textSize="@dimen/textSize18sp"
