提款金额改字号加粗

--- a/app/src/main/res/layout/online_pay_fragment.xml
+++ b/app/src/main/res/layout/online_pay_fragment.xml
@@ -37,7 +37,9 @@
             android:layout_height="wrap_content"
             android:paddingLeft="4dp"
             android:background="@color/color_FFFFFF"
-            app:cvTextColor="@color/color_9BB3D9_535D76"
+            app:cvTextColor="@color/color_0D2245"
+            app:cvTextSize="@dimen/textSize18sp"
+            app:cvTextStyle="bold"
             app:cvTitleTextStyle="normal"
             app:cvHint="@string/edt_hint_deposit_money"
             app:cvInputType="number"
