--- a/app/src/main/res/layout/activity_vip_benefits.xml
+++ b/app/src/main/res/layout/activity_vip_benefits.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="26dp"
             android:gravity="center"
-            android:text="My VIP Benefits"
+            android:text="@string/P371"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
             android:gravity="center_vertical"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:text="growth value"
+            android:text="@string/P362"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
             android:fontFamily="@font/helvetica_bold"
-            android:text="oliver.lee_888"
+            android:text="nickeName"
             android:textColor="@color/color_FFE6B3"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/ivProfile"
@@ -124,7 +124,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
-                        android:text="VIP 6 Benefits"
+                        android:text="@string/P368"
                         android:textColor="@color/color_0D2245"
                         android:textSize="16sp" />
 
@@ -139,7 +139,7 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="12dp"
-                        android:text="VIP 6 Benefits"
+                        android:text="@string/P370"
                         android:textColor="@color/color_0D2245"
                         android:textSize="16sp" />
 
@@ -171,7 +171,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="VIP details"
+                android:text="@string/P372"
                 android:textColor="@color/white"
                 android:textSize="24dp"
                 android:textStyle="bold" />
