--- a/app/src/main/res/layout/item_unactivated_benefits.xml
+++ b/app/src/main/res/layout/item_unactivated_benefits.xml
@@ -12,8 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:padding="8dp"/>
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/tvBenefitsName"
