--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -77,6 +77,12 @@
                     android:layout_height="wrap_content"/>
 
                 <org.cxct.sportlottery.view.MainMenuItemView
+                    android:id="@+id/menuPerya"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="12dp"/>
+
+                <org.cxct.sportlottery.view.MainMenuItemView
                     android:id="@+id/menuSport"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
