--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -92,7 +92,7 @@
     <color name="color_191D2F">#191D2F</color>
     <color name="color_EEF6FF">#BDEEF6FF</color>
     <color name="color_7CBDFF">#807CBDFF</color>
-    <color name="color_0063FF">#1A0063FF</color>
+    <color name="color_0063FF">#0063FF</color>
     <color name="color_B3F0F5FA">#B3F0F5FA</color>
     <color name="color_F8F9FD">#F8F9FD</color>
     <color name="color_806FA6FF">#806FA6FF</color>
@@ -648,5 +648,6 @@
     <color name="color_A5B2D0">#A5B2D0</color>
     <color name="color_FFA800">#FFA800</color>
     <color name="color_F2F7FE">#F2F7FE</color>
+    <color name="color_00C2FF">#00C2FF</color>
 
 </resources>
