--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -63,7 +63,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="parent"
-            android:layout_marginTop="7dp"
             android:layout_marginHorizontal="12dp"
             android:paddingHorizontal="4dp"/>
 
@@ -84,7 +83,6 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
             android:paddingTop="1dp">
 
             <LinearLayout
@@ -97,7 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="12dp"
-                    tools:background="@color/color_213643">
+                    android:background="@color/color_213643">
 
                     <TextView
                         android:id="@+id/tvTime"
@@ -106,6 +104,7 @@
                         android:background="@drawable/bg_darkblue_radius_8_2a4655"
                         android:gravity="center"
                         android:paddingHorizontal="6dp"
+                        android:fontFamily="@font/helvetica_normal"
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -131,8 +130,8 @@
                         android:layout_marginEnd="15dp"
                         android:gravity="center_vertical"
                         android:maxLines="1"
-                        android:textColor="@color/color_BEC7DC"
-                        android:textSize="14sp"
+                        android:textColor="@color/white"
+                        android:textSize="13sp"
                         app:layout_constraintEnd_toStartOf="@+id/linSection"
                         app:layout_constraintStart_toEndOf="@+id/ivHomeLogo"
                         app:layout_constraintTop_toTopOf="@+id/ivHomeLogo"
@@ -156,8 +155,8 @@
                         android:layout_marginEnd="15dp"
                         android:gravity="center_vertical"
                         android:maxLines="1"
-                        android:textColor="@color/color_BEC7DC"
-                        android:textSize="14sp"
+                        android:textColor="@color/white"
+                        android:textSize="13sp"
                         app:layout_constraintEnd_toStartOf="@+id/linSection"
                         app:layout_constraintStart_toEndOf="@+id/ivAwayLogo"
                         app:layout_constraintTop_toTopOf="@+id/ivAwayLogo"
@@ -193,6 +192,7 @@
                             android:background="@drawable/bg_darkblue_radius_8_233e4a">
 
                             <TextView
+                                android:id="@+id/tvQ1"
                                 android:layout_width="50dp"
                                 android:layout_height="25dp"
                                 android:gravity="center"
@@ -201,9 +201,11 @@
                                 android:textSize="12sp"
                                 android:textStyle="bold"
                                 app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:viewBindingIgnore="true"/>
 
                             <TextView
+                                android:id="@+id/tvQ2"
                                 android:layout_width="50dp"
                                 android:layout_height="25dp"
                                 android:layout_marginTop="25dp"
@@ -213,9 +215,11 @@
                                 android:textSize="12sp"
                                 android:textStyle="bold"
                                 app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:viewBindingIgnore="true"/>
 
                             <TextView
+                                android:id="@+id/tvQ3"
                                 android:layout_width="50dp"
                                 android:layout_height="25dp"
                                 android:layout_marginTop="50dp"
@@ -225,9 +229,11 @@
                                 android:textSize="12sp"
                                 android:textStyle="bold"
                                 app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:viewBindingIgnore="true"/>
 
                             <TextView
+                                android:id="@+id/tvFT"
                                 android:layout_width="50dp"
                                 android:layout_height="25dp"
                                 android:gravity="center"
@@ -236,50 +242,55 @@
                                 android:textSize="12sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintLeft_toLeftOf="parent" />
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                tools:viewBindingIgnore="true"/>
 
                             <TextView
                                 android:id="@+id/tvQ1Amount"
-                                android:layout_width="89dp"
+                                android:layout_width="0dp"
                                 android:layout_height="25dp"
                                 android:gravity="center"
                                 android:textColor="@color/white"
                                 android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/tvQ1"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="100$" />
 
                             <TextView
                                 android:id="@+id/tvQ2Amount"
-                                android:layout_width="89dp"
+                                android:layout_width="0dp"
                                 android:layout_height="25dp"
                                 android:layout_marginTop="25dp"
                                 android:gravity="center"
                                 android:textColor="@color/white"
                                 android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/tvQ2"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="100$" />
 
                             <TextView
                                 android:id="@+id/tvQ3Amount"
-                                android:layout_width="89dp"
+                                android:layout_width="0dp"
                                 android:layout_height="25dp"
                                 android:layout_marginTop="50dp"
                                 android:gravity="center"
                                 android:textColor="@color/white"
                                 android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/tvQ3"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="100$" />
 
                             <TextView
                                 android:id="@+id/tvQ4Amount"
-                                android:layout_width="89dp"
+                                android:layout_width="0dp"
                                 android:layout_height="25dp"
                                 android:gravity="center"
                                 android:textColor="@color/white"
                                 android:textSize="12sp"
+                                app:layout_constraintStart_toEndOf="@+id/tvFT"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 tools:text="100$" />
@@ -326,8 +337,8 @@
                     android:layout_height="wrap_content"
                     android:background="@color/color_213643"
                     android:clipToPadding="false"
-                    android:paddingHorizontal="8dp"
-                    android:paddingVertical="12dp" />
+                    android:padding="8dp"
+                    android:paddingTop="6dp"/>
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
