--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -105,7 +105,7 @@
             android:background="@color/color_071824"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_40"
+            android:layout_height="@dimen/margin_44"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -134,7 +134,7 @@
             android:background="@color/color_071824"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_40"
+            android:layout_height="@dimen/margin_44"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -189,7 +189,7 @@
             android:background="@color/color_071824"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_40"
+            android:layout_height="@dimen/margin_44"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -218,7 +218,7 @@
             android:background="@color/color_071824"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_40"
+            android:layout_height="@dimen/margin_44"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -247,7 +247,7 @@
             android:background="@color/color_071824"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_40"
+            android:layout_height="@dimen/margin_44"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -276,7 +276,7 @@
             android:background="@color/color_071824"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_40"
+            android:layout_height="@dimen/margin_44"
             android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -310,7 +310,7 @@
             android:layout_marginTop="@dimen/margin_8"
             android:lineSpacingExtra="3dp"
             android:textSize="@dimen/textSize12sp"
-            android:textColor="@color/color_B1BAD3"
+            android:textColor="@color/color_8EAEC5"
             android:text="@string/P322"/>
 
     </LinearLayout>
